--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
+    "notiflix": "^3.2.7",
     "postcss": "^8.4.47",
     "postcss-preset-env": "^10.0.9"
   }
